--- a/_posts/2024-01-22-xsl.md
+++ b/_posts/2024-01-22-xsl.md
@@ -6,6 +6,7 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/xsl/
 ---
 
+{:.section}
 ## ¿Qué es XSL?
 
 El Lenguaje de Hojas de Estilo Extensibles (eXtensible Stylesheet Language, abreviado como “XSL”) es el complemento natural de XML. En términos generales, proporciona instrucciones de procesamiento; en cierto modo, podríamos decir que XSL es análogo a las Hojas de Estilos en Cascada (Cascading Stylesheets, abreviado “CSS”) necesarias para presentar archivos HTML. Ambos lenguajes permiten transformar el texto plano en un formato de texto enriquecido, así como determinar su diseño y apariencia tanto en pantalla como impreso, sin tener que alterar los archivos originales. En un nivel más avanzado, también permiten ordenar y filtrar la información según un criterio concreto y crear o visualizar otros datos derivados a partir del archivo original.
@@ -15,17 +16,21 @@ Al separar los datos (XML) de las instrucciones de procesamiento (XSL), es posib
 El lenguaje XSL tiene dos ramas:
 
 - **XSL Formatting Objects** (XSL:FO), que contiene instrucciones de formato para producir un documento PDF a partir de un documento XML.
-- **Extensible Stylesheet Language Transformations** (XSLT), contiene instrucciones para transformar un documento XML en otros documentos (XML, HTML, XHTML y texto plano). En este tutorial solo se discute la segunda.
+- **Extensible Stylesheet Language Transformations** (XSLT), contiene instrucciones para transformar un documento XML en otros documentos (XML, HTML, XHTML y texto plano).
 
 ![Esquema general de XSL](XSL-general.png)
 _Esquema general de XSL_
 
-> XPath es un lenguaje para seleccionar o navegar entre los nodos en lenguaje XML
+> XPath es un lenguaje para seleccionar nodos de un documento XML.
 {:.prompt-info}
 
+{:.section}
 ## ¿Qué es XSLT?
 
 XSLT (Transformaciones XSL) es un lenguaje de programación declarativo que permite generar documentos a partir de documentos XML, como ilustra la imagen siguiente:
+
+![Esquema de funcionamiento de procesador XSLT En verde los documentos XML](XSLT-procesador.jpg)
+_Esquema de funcionamiento de procesador XSLT. En verde los documentos XML_
 
 <details class="card mb-2">
   <summary class="card-header question">¿Qué es un lenguaje de programación declarativo? ¿E imperativo?</summary>
@@ -39,9 +44,6 @@ XSLT (Transformaciones XSL) es un lenguaje de programación declarativo que perm
 <!-- Comentario para que no se descuajeringue la cosa -->
   </div>
 </details>
-
-![Esquema de funcionamiento de procesador XSLT En verde los documentos XML](XSLT-procesador.jpg)
-_Esquema de funcionamiento de procesador XSLT. En verde los documentos XML_
 
 - El documento XML es el documento inicial a partir del cual se va a generar el resultado.
 - La hoja de estilo XSLT es el documento que contiene el código fuente del programa, es decir, las reglas de transformación que se van a aplicar al documento inicial.
@@ -62,6 +64,7 @@ _Linea del tiempo de XSLT_
 
 Aunque hay incompatibilidades entre estas versiones, lo que se cuenta en esta lección es válido para todas ellas.
 
+{:.section}
 ## Hojas de estilo XSLT
 
 XSLT es un lenguaje declarativo. Por ello, las hojas de estilo XSLT no se escriben como una secuencia de instrucciones, sino como una colección de plantillas (template rules). Cada plantilla establece cómo se transforma un determinado elemento (definido mediante expresiones XPath). La transformación del documento se realiza de la siguiente manera:
@@ -73,18 +76,21 @@ XSLT es un lenguaje declarativo. Por ello, las hojas de estilo XSLT no se escrib
   - Si a un nodo se le puede aplicar una plantilla, se aplica la plantilla. La plantilla puede generar texto que se incluye en el documento final. En principio, el procesador no recorre sus nodos hijos, salvo que la plantilla indique al procesador que sí que deben recorrerse los nodos hijos.
 - Cuando el procesador ha recorrido el árbol, se ha terminado la transformación.
 
-Una hoja de estilo XSLT es un documento XML que contiene al menos las etiquetas siguientes:
+Una hoja de estilos XSL es un documento XML con extensión .xsl, en el que se define las transformaciones a realizar en el documento, mediante una serie de elementos y atributos.
+
+Primero, se debe indicar la cabecera para indicar que es un fichero XML:
 
 ```xml
-<?xml version="1.0" encoding="UTF-8"?>
-<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform" version="1.0">
+<?xml version="1.0" encoding="UTF-8" ?>
+```
+
+Posteriormente se indica el siguiente elemento raíz para indicar que es un documento XSL:
+
+```xml
+<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 </xsl:stylesheet>
 ```
 
-Estas etiquetas son:
-
-la declaración xml `<?xml>`, propia de cualquier documento XML.
-la instrucción `<xsl:stylesheet>` es la etiqueta raíz de la hoja de estilo, sus atributos indican la versión y el espacio de nombres correspondiente.
 Dentro de la instrucción `<xsl:stylesheet>` se pueden encontrar los llamados elementos de alto nivel y las plantillas, como en el ejemplo siguiente:
 
 ```xml
@@ -99,12 +105,13 @@ Dentro de la instrucción `<xsl:stylesheet>` se pueden encontrar los llamados el
 </xsl:stylesheet>
 ```
 
-Estas etiquetas son
+Estas etiquetas son:
 
-el elemento de alto nivel `<xsl:output>` indica el tipo de salida producida.
-la instrucción `<xsl:template>` es una plantilla.
-El atributo match indica los elementos afectados por la plantilla y contiene una expresión XPath.
-El contenido de la instrucción define la transformación a aplicar (si la instrucción no contiene nada, como en el ejemplo anterior, sustituirá el nodo por nada, es decir, eliminará el nodo, aunque conservará el texto contenido en el elemento).
+- El elemento de alto nivel `<xsl:output>` indica el tipo de salida producida.
+- La instrucción `<xsl:template>` es una plantilla.
+  - El atributo `match` indica los elementos afectados por la plantilla y contiene una expresión XPath.
+  - El contenido de la instrucción define la transformación a aplicar (si la instrucción no contiene nada, como en el ejemplo anterior, sustituirá el nodo por nada, es decir, eliminará el nodo, aunque conservará el texto contenido en el elemento).
+  
 Cuando se aplica una plantilla a un nodo, en principio no se recorren los nodos descendientes. Para indicar que sí queremos recorrer los nodos descendientes y aplicarles las plantillas que les correspondan, hay que utilizar la instrucción <xsl:apply-templates />, como en el ejemplo siguiente:
 
 ```xml
@@ -131,9 +138,10 @@ Con CSS NO se pueden realizar operaciones, como sumar valores de todos los eleme
   </div>
 </details>
 
+{:.section}
 ## Enlazar documentos XML con hojas de estilo XSLT
 
-Se puede asociar de forma permanente una hoja de estilo XSLT a un documento XML mediante la instrucción de procesamiento `<?xml-stylesheet ?>`, la misma que permite asociar hojas de estilo CSS. La instrucción de procesamiento `<?xml-stylesheet ... ?>` va al principio del documento, después de la declaración XML.
+Se puede asociar de forma permanente una hoja de estilo XSLT a un documento XML mediante la instrucción de procesamiento `<?xml-stylesheet ?>`, la misma que permite [asociar hojas de estilo CSS](https://www.mclibre.org/consultar/xml/lecciones/xml-css.html#xml-css). La instrucción de procesamiento `<?xml-stylesheet ... ?>` va al principio del documento, después de la declaración XML.
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -142,72 +150,20 @@ Se puede asociar de forma permanente una hoja de estilo XSLT a un documento XML 
 
 Cuando se visualiza en un navegador web un documento XML enlazado con una hoja de estilo XSLT, los navegadores muestran el resultado de la transformación, aunque si se muestra el código fuente de la página, los navegadores muestran el documento XML original.
 
-Nota: Google Chrome no muestra los documentos XML que enlazan a hojas de estilo XSLT abiertos como archivos locales (`file://...`), como se comenta en la lección de diferencias entre navegadores. Firefox sí lo hace.
+> Google Chrome no muestra los documentos XML que enlazan a hojas de estilo XSLT abiertos como archivos locales (`file://...`), como se comenta en la lección de diferencias entre navegadores. Firefox sí lo hace.
+{:.prompt-info}
 
-## Abrir documentos XML con hojas de estilo XSLT en el navegador
+<details class="card mb-2">
+  <summary class="card-header question">¿Qué ocurre si abro documentos XML con hojas de estilo XSLT en el navegador?</summary>
+  <div class="card-body" markdown="1">
 
-Al abrir en un navegador una página XML enlazada con una hoja de estilo XSLT, el navegador muestra el resultado de la transformación. Pero no muestra el código fuente obtenido como resultado, sino interpretando ese código fuente, como cuando se enlaza una hoja de estilo CSS vacía.
+Al abrir en un navegador una página XML enlazada con una hoja de estilo XSLT, **el navegador muestra el resultado de la transformación**. Pero no muestra el código fuente obtenido como resultado, sino interpretando ese código fuente, como cuando se enlaza una hoja de estilo CSS vacía.
 
-En los ejemplos de esta página se ha incluido a la derecha un enlace para abrir el ejemplo en el navegador. En los primeros ejemplos, el resultado es texto que se muestra todo seguido. Más adelante, en esta misma lección, en los ejemplo se generan resultados que el navegador puede mostrar en forma de párrafos. En los ejercicios se proponen transformaciones que el navegador puede mostrar en forma de listas o tablas.
+<!-- Comentario para que no se descuajeringue la cosa -->
+  </div>
+</details>
 
-Realmente, tanto en los ejemplos como en los ejercicios no es necesario abrir los archivos en el navegador. Basta con comprobar que se obtiene el resultado deseado en XML Copy Editor (u otro editor que estemos utilizando).
-
-## Estructura básica de XSLT
-
-Una hoja de estilos XSL es un documento XML con extensión .xsl, en el que se define las transformaciones a realizar en el documento, mediante una serie de elementos y atributos.
-
-Primero, se debe indicar la cabecera para indicar que es un fichero XML:
-
-```xml
-<?xml version="1.0" encoding="UTF-8" ?>
-```
-
-Posteriormente se indica el siguiente elemento raíz para indicar que es un documento XSL:
-
-```xml
-<xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
-```
-
-## Elementos hijos de `<xsl:stylesheet>`
-
-- `<xsl:import>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
-- `<xsl:include>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
-- `<xsl:strip-space>`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
-- `<xsl:preserve-space>`: Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
-- `<xsl:output>`: Define el formato del documento de salida
-- `<xsl:key>`: Declara una clave para la búsqueda de nodos.
-- `<xsl:decimal-format>`: 
-- `<xsl:attribute-set>`: Con este elemento se definen conjuntos de atributos (<xsl:attribute>).
-- `<xsl:variable>`: Mediante este elemento podemos definir variables. Cuando se usa como elemento de alto nivel se definen variables globales, que son válidas en toda la hoja de estilo. De no ser así, las variables tendrán validez local.
-- `<xsl:param>`: Con este elemento se declaran parámetros. 
-- `<xsl:template>`: Instrucción principal de XSLT. Representa una plantilla con una serie de acciones que se realizarán si el patrón de la plantilla (atributo match) encaja con algún elemento o elementos del árbol XML.
-- `<xsl:namespace-alias>`: Se usa para sustituir un espacio de nombres en la hoja de estilos por otro espacio de nombres en el documento de salida.
-
-## Más sobre `<xsl:template>`
-
-- Establece las transformaciones a realizar en el documento.
-- Se definen utilizando el elemento `<xsl:template>`.
-- A través del atributo match, se establece el patrón. El patrón indica la rama del árbol XML sobre la que se aplica la plantilla.
-- El atributo name que dará nombre a la plantilla para poder ser invocada desde la instrucción `<xsl:call-template name="<nombreDeLaPlantilla>">`
-- Para seleccionar el árbol del documento completo, se utiliza el patrón raíz (`/`). Por ejemplo:
-
-```xml
-<xsl:template match="/">
-  instrucciones de plantilla
-</xsl:template>
-```
-
-- Las instrucciones de plantilla indican la transformación a realizar sobre el patrón. Este ejemplo, transforma el elemento nombre en su valor con formato título. Por ejemplo:
-
-```xml
-<xsl:template match="nombre">
-  <h2><xsl:value-of/><h2>
-</xsl:template>
-```
-
-![Elementos hijos de xsl:template](xsl_template.bmp)
-_Elementos hijos de xsl:template_
-
+{:.section}
 ## Elementos básicos de XSLT
 
 - `<xsl:stylesheet>`: Define el elemento raíz de la hoja de transformaciones.
@@ -219,18 +175,84 @@ _Elementos hijos de xsl:template_
 - `<xsl:value-of>`: Visualiza el contenido del elemento indicado en el atributo select, y de sus descendientes. Existe una versión simplificada que sólo se puede usar en la creación de nuevos elementos.
 - `<xsl:text>`: Permite escribir el texto literal en la salida.
 
+{:.section}
+## Elemento xsl:stylesheet
+
+Elemento raíz en una hoja de estilo XSLT.
+
+Elementos hijo de `<xsl:stylesheet>`:
+
+- `<xsl:import>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:include>`: Incluye una hoja de estilo XSLT externa en el documento de salida.
+- `<xsl:strip-space>`: Elimina espacios en blanco en el documento de origen. Con el atributo obligatorio elements se seleccionan los elementos, en los cuales se eliminarán los espacios en blanco. 
+- `<xsl:preserve-space>`: Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
+- `<xsl:output>`: Define el formato del documento de salida
+- `<xsl:key>`: Declara una clave para la búsqueda de nodos.
+- `<xsl:decimal-format>`: Define el formato de salida para los números decimales.
+- `<xsl:attribute-set>`: Con este elemento se definen conjuntos de atributos (<xsl:attribute>).
+- `<xsl:variable>`: Mediante este elemento podemos definir variables. Cuando se usa como elemento de alto nivel se definen variables globales, que son válidas en toda la hoja de estilo. De no ser así, las variables tendrán validez local.
+- `<xsl:param>`: Con este elemento se declaran parámetros. 
+- `<xsl:template>`: Instrucción principal de XSLT. Representa una plantilla con una serie de acciones que se realizarán si el patrón de la plantilla (atributo match) encaja con algún elemento o elementos del árbol XML.
+- `<xsl:namespace-alias>`: Se usa para sustituir un espacio de nombres en la hoja de estilos por otro espacio de nombres en el documento de salida.
+
+{:.section}
+## Elemento xsl:template
+
+Con el elemento `xsl:template` elemento se definen un conjunto de reglas (plantilla) que indican cómo deben procesarse los nodos.
+
+A través del atributo `match` se establecen los nodos a los que se aplicará la plantilla. Para seleccionar el árbol del documento completo, se utiliza el patrón raíz (`/`). Por ejemplo:
+
+```xml
+<xsl:template match="/">
+  instrucciones de plantilla
+</xsl:template>
+```
+
+Con el atribulo opcional `name` se le puede asignar un nombre a la plantilla, el cual se puede invocar por medio de `xsl:call-template`.
+
+Las instrucciones de plantilla indican la transformación a realizar sobre el patrón. Este ejemplo, transforma el elemento nombre en su valor con formato título. Por ejemplo:
+
+```xml
+<xsl:template match="nombre">
+  <h2><xsl:value-of/><h2>
+</xsl:template>
+```
+
+Elementos hijo de `xsl:template`:
+
+- `xsl:apply-templates`
+- `xsl:call-template`
+- `xsl:apply-imports`
+- `xsl:for-each`
+- `xsl:value-of`
+- `xsl:number`
+- `xsl:choose`
+- `xsl:if`
+- `xsl:text`
+- `xsl:copy`
+- `xsl:variable`
+- `xsl:message`
+- `xsl:fallback`
+- `xsl:processing-instruction`
+- `xsl:comment`
+- `xsl:element`
+- `xsl:attribute`
+- `xsl:param`
+
+{:.section}
 ## Instrucciones de control
 
 - `<xsl:for-each>`: Permite iterar sobre una lista de elementos y aplicar transformaciones sobre ellos. El atributo select define la lista de elementos sobre los que se va a iterar.
 - `<xsl:sort>`: Envía a la salida datos del documento XML de partida ordenados por algún criterio. Los atributos principales son:
-  - select: expresión XPath que indica el conjunto de nodos a ordenar.
-  - lang: indica qué idioma se utiliza al ordenar
-  - data-type: especifica el tipo de datos que se ordenarán.
-  - order: concreta si el orden es ascendente o descendente.
-  - case-order: especifica si las mayúsculas van antes que las minúsculas o viceversa (lower-first, upper-first).
+  - `select`: expresión XPath que indica el conjunto de nodos a ordenar.
+  - `lang`: indica qué idioma se utiliza al ordenar
+  - `data-type`: especifica el tipo de datos que se ordenarán.
+  - `order`: concreta si el orden es ascendente o descendente.
+  - `case-order`: especifica si las mayúsculas van antes que las minúsculas o viceversa (`lower-first`, `upper-first`).
 - `<xsl:if>`: Se utiliza para producir un comportamiento condicional. Sólo permite preguntar por una condición y la manera de actuar si esta es cierta. El atributo test es el que incluye la expresión XPath que debe ser cierta o falsa.
 - `<xsl:choose>`, `<xsl:when>`, `<xsl:otherwise>`: Permiten implementar un comportamiento condicional con múltiples opciones y una opción por defecto. Es equivalente a un switch de Java.
 
+{:.section}
 ## Generación de nuevos elementos
 
 - `<xsl:element>`:  Permite generar un nuevo elemento/nodo en el documento de salida. El atributo obligatorio name especifica el nombre del nuevo elemento.
@@ -240,6 +262,7 @@ _Elementos hijos de xsl:template_
 - `<xsl:copy-of>`: Realiza una copia literal de un elemento a la salida. Los atributos y elementos descendientes se copiarán también.
 - `<xsl:copy>`: Realiza una copia de un nodo, pero no de sus descendientes ni atributos.
 
+{:.section}
 ## Elementos avanzados de XSLT
 
 - `<xsl:preserve-space>`:  Con este elemento puede especificarse qué elementos deben conservar los espacios en blanco.
@@ -251,6 +274,7 @@ _Elementos hijos de xsl:template_
 - `<xsl:with-param>`: Se define el valor de un parámetro que se pasará a una plantilla.
 - `<xsl:param>`: Con este elemento se declaran parámetros.
 
+{:.section}
 ## Prioridades y resolución de conflictos
 
 - `<xsl:number>`:  Este elemento asigna un valor numérico a la posición de un elemento en el documento de salida y sirve por lo tanto para la numeración.
@@ -264,6 +288,7 @@ _Elementos hijos de xsl:template_
 {:.question}
 ¿Qué ocurrirá si a una plantilla se le asigna una prioridad mayor que 0.5?
 
+{:.section}
 ## Ejemplos de plantillas XSLT
 
 Vamos a ver ejemplos de plantillas trabajando sobre el documento siguiente:
@@ -289,8 +314,9 @@ Vamos a ver ejemplos de plantillas trabajando sobre el documento siguiente:
 </biblioteca>
 ```
 
-Si los ejemplos de esta página se abren en el navegador, el resultado no coincide en casi todos los casos con el que se muestra en esta página ya que los navegadores no respetan los saltos de línea ni los espacios en blanco, ni muestran las etiquetas. Los resultados que se muestran en esta página son los que se obtienen con XML Copy Editor.
+Si los ejemplos de este artículo se abren en el navegador, el resultado no coincide en casi todos los casos con el que se muestra en esta página ya que los navegadores no respetan los saltos de línea ni los espacios en blanco, ni muestran las etiquetas.
 
+{:.subsection}
 ### Plantillas vacías o no existentes
 
 Si no hay plantillas, el procesador simplemente recorre todos los nodos y extrae el texto contenido por cada nodo.
@@ -361,6 +387,7 @@ En el caso más extremo, si la plantilla vacía se aplica al nodo raíz, el proc
 ```
 {: file="salida.xml" }
 
+{:.subsection}
 ### La instrucción `<xsl:value-of>`
 
 La instrucción `<xsl:value-of>` extrae el contenido del nodo seleccionado.
@@ -474,6 +501,7 @@ En el ejemplo siguiente, las fechas de publicación se obtienen gracias a la reg
 ```
 {: file="salida.xml" }
 
+{:.subsection}
 ### Generar texto adicional
 
 Se puede generar texto escribiéndolo en la regla, por ejemplo, código html.
@@ -619,6 +647,7 @@ En el ejemplo siguiente se generan frases a partir del contenido de los nodos.
 ```
 {: file="salida.xml" }
 
+{:.subsection}
 ### Aplicar reglas a subnodos: la instrucción `<xsl:apply-templates>`
 
 La instrucción `<xsl:apply-templates>` hace que se apliquen a los subelementos las reglas que les sean aplicables.
@@ -656,12 +685,14 @@ En el ejemplo siguiente, se genera la etiqueta `<html>` además de unos párrafo
 
 La primera regla sustituye el elemento raíz (y todos sus subelementos) por las etiquetas `<html>` y `<h1>`, pero además aplica a los subelementos las reglas que les son aplicables. En este caso, sólo hay una regla para los elementos `<libro>` que generan los párrafos.
 
+{:.subsection}
 ### Saltos de línea y espacios en blanco: las instrucciones `<xsl:text>` y `<xsl:strip-space>`
 
 Al transformar un documento, los procesadores XSLT incorporan saltos de línea y espacios en blanco en el resultado, pero no lo hacen de forma uniforme. Por ejemplo, XML Copy Editor y Notepad++ (con el plug-in XML Tools) producen diferentes resultados.
 
 No parece haber una solución sencilla que funcione en todos los procesadores, pero sí soluciones que funcionen en cada uno de ellos.
 
+{:.subsection}
 ### La instrucción `<xsl:strip-space>`
 
 En el caso de XML Copy Editor, la forma más sencilla de mejorar el formato de presentación de los resultados, eliminando líneas en blanco innecesarias y sangrando los elementos anidados, es utilizar la instrucción `<xsl:strip-space>`. Pero debe tenerse en cuenta que esta instrucción no produce el mismo resultado en otros procesadores XSLT (como en Notepad++ con XML Tools).
@@ -701,6 +732,7 @@ En el ejemplo anterior (del apartado sobre la instrucción `<xsl:apply-templates
 ```
 {: file="salida.xml" }
 
+{:.subsection}
 ### La instrucción `<xsl:text>`
 
 En el caso de Notepad++ con XML Tools, se puede mejorar el formato de presentación de los resultados, insertando líneas en blanco innecesarias y sangrando los elementos anidados, utilizando la instrucción `<xsl:text>`. Pero debe tenerse en cuenta que esta instrucción no permite eliminar líneas en blanco que se producen en otros procesadores (como en XML Copy Editor).
@@ -740,6 +772,7 @@ En el ejemplo anterior (del apartado sobre la instrucción `<xsl:apply-templates
 ```
 {: file="salida.xml" }
 
+{:.subsection}
 ### La instrucción `<xsl:attribute>`
 
 La instrucción `<xsl:attribute>` permite generar un atributo y su valor. Se utiliza cuando el valor del atributo se obtiene a su vez de algún nodo.
@@ -839,6 +872,7 @@ Como en ejemplos anteriores, para que la imagen se muestre en el navegador serí
 ```
 {: file="salida.xml" }
 
+{:.section}
 ## Bibliografía
 
 - <https://learn.microsoft.com/en-us/previous-versions/dotnet/netframework-4.0/ms256069(v=vs.100)?redirectedfrom=MSDN>
